--- a/Client/package.json
+++ b/Client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "flatlist-react": "^1.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -15,6 +16,8 @@
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "rsuite": "^4.10.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
