--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node server/index.js",
     "test": "mocha server/tests/**/*.spec.js",
-    "build": "cd client && yarn install && yarn run build"
+    "build": "cd Client && yarn install && yarn run build"
   },
   "keywords": [],
   "license": "ISC",
